@@ -1,3 +1,10 @@
+2010-07-21  Xavier Queralt  <xqueralt@flumotion.com>
+
+	* flumotion/component/muxers/flv/flv.xml:
+	* flumotion/component/plugs/flashhttp/flashhttp.xml:
+	Change deprecated attribute 'description' by '_description' and add
+	some missing descriptions too
+
 2010-06-03  Julien Le Goff  <jlegoff@flumotion.com>
 
 	* flumotion/component/muxers/flv/Makefile.am:
